--- a/Rapport_kevine.Rmd
+++ b/Rapport_kevine.Rmd
@@ -3,58 +3,131 @@ title: "L'apport du numérique dans la sécurité des aliments à travers la tra
 author: "Kevine Gadjeu"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
-  pdf_document:
-    toc: true
-    toc_depth: '3'
   html_document:
-    code_folding: hide
-    fig_caption: true
-    number_sections: true
     toc: true
-    toc_float: true
+    toc_float: false
+    number_sections: true
+    code_folding: hide
+    theme: bootstrap
 bibliography: biblio/Informatique.bib
 csl: "biblio/isara-iso-690.csl"
-header-includes:
-  - \usepackage[T1]{fontenc}
-  - \usepackage[utf8]{inputenc}
-  - \usepackage{lmodern}
 ---
+
+<style>
+/* Style pour encadrer le sommaire au début du texte */
+#TOC {
+    background-color: #f8f9fa;
+    border: 1px solid #dee2e6;
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 30px;
+}
+
+/* Pied de page fixe en bas de l'écran */
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f8f9fa;
+    color: #6c757d;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 12px;
+    border-top: 1px solid #dee2e6;
+    z-index: 100;
+}
+
+body {
+    margin-bottom: 60px; /* Espace pour ne pas cacher le texte derrière le pied de page */
+}
+</style>
+
+<div class="footer">
+  Kevine Gadjeu - Rapport de stage - 2026
+</div>
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 library(knitr)
 ```
 
-# Problèmatique
+# INTRODUCTION {-}
 
-comment le numérique améliore t'il la sécurité des aliments à travers la traçabilté
+La sécurité alimentaire, en matière de qualité, est devenue un sujet d’actualité au cours de ces dernières années. Les graves crises alimentaires, comme celle de la « vache folle » et celle causée par la forte croissance de la production des organismes génétiquement modifiés (OGM), inquiètent de plus en plus les populations. Dès lors, plusieurs pays dans le monde ont dû instaurer des mesures nationales pour assurer l’innocuité des biens de consommation tout en respectant les règles du commerce international [@bonnin2004]. Dans ce contexte, la traçabilité des aliments apparaît comme un levier important pour assurer la qualité, la sécurité et la confiance des consommateurs. 
 
-# Définitions
-# Définitions
+Avec l’avenue du numérique, de nouveaux outils technologiques sont venus renforcer les systèmes de contrôle des aliments à travers la traçabilité. Les systèmes d’information, les technologies d’identification automatique, l’internet des objets (IoT) ou encore la blockchain transforment profondément la manière dont les données alimentaires sont collectées, stockées et partagées. Ce rapport analyse donc l’apport du numérique dans la sécurité des aliments à travers la traçabilité, en mettant en lumière ses bénéfices, mais aussi ses limites.
 
-Selon @valceschini2015tracabilite, la **traçabilité** requiert la capacité à enregistrer et à conserver les informations relatives à un produit. À chaque cession ou transaction, ces données doivent être transférées sous la forme d’un étiquetage approprié, de documents d’accompagnement ou, de plus en plus fréquemment, sous **forme électronique**.
-
-C'est précisément ici que le numérique intervient : pour stocker ces "formes électroniques" de manière sécurisée et pérenne, les entreprises s'appuient sur des infrastructures comme le Cloud ou le NAS.
-
-**Le numérique** correspond à l’ensemble des technologies permettant le traitement et l’échange de données sous forme digitale 
-
-
-
-## Présentation Générale
-
-La traçabilité alimentaire désigne l’ensemble des processus permettant de suivre un produit tout au long de la chaîne agroalimentaire, depuis la production jusqu’à la consommation, afin d’assurer sa qualité et son innocuité. Ce suivi rigoureux est essentiel pour prévenir les risques sanitaires, faciliter les rapports de rappel de produits en cas de contamination et renforcer la confiance des consommateurs vis-à-vis des systèmes alimentaires modernes. La traçabilité est donc devenue un enjeu central pour les entreprises et les autorités publiques qui souhaitent garantir la sécurité alimentaire dans un contexte de chaînes d’approvisionnement de plus en plus globalisées et complexes. En effet, des systèmes de traçabilité numériques permettent de collecter, structurer et analyser des données tout au long de la chaîne d’approvisionnement, ce qui améliore l’efficacité des réponses aux crises sanitaires et la transparence des informations produites pour les consommateurs.
-L’intégration du numérique dans les dispositifs de traçabilité repose sur l’usage de technologies comme les bases de données centralisées, les capteurs connectés, les codes QR, la RFID (Radio-Frequency Identification) ou encore la blockchain. Ces outils favorisent l’enregistrement automatique d'informations, la réduction des erreurs humaines et la transmission rapide des données entre les différents acteurs de la chaîne agroalimentaire. Par exemple, des études montrent que l’adoption de solutions numériques dans les systèmes de traçabilité améliore la transparence de la chaîne d’approvisionnement, la conformité réglementaire et la réactivité face aux incidents alimentaires.
-La digitalisation de la traçabilité ne profite pas uniquement à la sécurité alimentaire, mais aussi à l’optimisation des opérations, à la réduction des coûts et à la promotion de pratiques durables. Néanmoins, elle soulève également des défis, tels que la standardisation des données, l’interopérabilité des systèmes et l’obligation de former les acteurs aux nouvelles technologies. Malgré ces obstacles, les avancées numériques continuent à transformer les pratiques de traçabilité, offrant des perspectives prometteuses pour une gestion plus fiable, transparente et durable des systèmes alimentaires.
-
-
-
-# Conclusion
-
-
-## Liens
-
-ISARA : <https://isaranet.fr/> consulté le ...
-
-## Bibliographie
-
+# LA TRAÇABILITÉ : UN ENJEU DE L'AGROALIMENTAIRE
  
+## Définition et objectifs de la traçabilité
+
+La traçabilité requiert la capacité à enregistrer et à conserver les informations relatives à un produit et, à chaque cession ou transaction, de les transférer sous la forme d’un étiquetage approprié, de documents d’accompagnement ou sous forme électronique [@valceschini2015]. Selon la norme ISO 22005, elle consiste à tracer l’historique, l’utilisation ou la location d’un produit à l’aide d’identifications enregistrées. Les principaux principes de la traçabilité sont de donner les informations aux consommateurs sur les produits alimentaires, assurer la sécurité des consommateurs grâce à la gestion de la chaîne alimentaire et faciliter le retrait et les rappels de produits présentant des anomalies.
+
+## Les risques en cas de mauvaise traçabilité
+
+Une traçabilité défaillante peut entraîner de graves conséquences :
+
+* **Les risques sanitaires** : ce sont les risques les plus immédiats car ils mettent en danger la santé des consommateurs. Une mauvaise traçabilité ne permettra pas d’identifier l’origine d’un aliment contaminé (bactéries, allergènes, toxines). C’est d’ailleurs la raison pour laquelle l’article 18 du Règlement (CE) n° 178/2002 [@eurlex2002] impose l’importance d’assurer à un niveau élevé la sécurité des consommateurs. 
+
+* **Les risques juridiques** : L’étiquetage trompeur ou incomplet des denrées alimentaires est sanctionné par le Code de la consommation [@wells_nd]. L’omission d’informations obligatoires ou la présence de mentions interdites sont punies de sanctions pénales sévères. De l’autre côté, le défaut de traçabilité des produits alimentaires est réprimé par le Code rural, l’absence de tenue des registres obligatoires ou l’impossibilité d’identifier l’origine des denrées peuvent entraîner de lourdes amendes et des peines d'emprisonnement. 
+
+* **Les risques sociaux et commerciaux** : une mauvaise traçabilité peut entraîner une perte de confiance des consommateurs. En effet, les consommateurs modernes cherchent à savoir d’où viennent les produits qu’ils consomment. Les marques qui n’offrent pas la transparence sur leurs produits peuvent perdre leur crédibilité vis-à-vis des clients et par conséquent subir une baisse des ventes. 
+
+## Cadre réglementaire et normes en matière de traçabilité
+
+La traçabilité est un des outils indispensables dans tout processus de qualité des produits susceptibles d’affecter la santé humaine notamment l’alimentation. Elle recouvre différents concepts notamment la sécurité, la transparence de l’origine des produits, la loyauté des transactions commerciales et la qualité en général. 
+
+Selon [@louiza2024], plusieurs textes normatifs et réglementaires font référence à la traçabilité : le Codex alimentarius, l’ISO 22000 : 2005, ISO 22005 : 2007 et l’article 18 du Règlement (CE) n° 178/2002 [@eurlex2002].
+
+# Les outils numériques au profit de la traçabilité
+
+## Systèmes d’information et bases de données centralisées
+
+Les systèmes d’information jouent un rôle central dans la gestion de la traçabilité alimentaire. Ils permettent de collecter, stocker et analyser de grandes quantités de données relatives aux matières premières, aux processus de transformation et à la distribution des produits. Les bases de données centralisées facilitent le partage d’informations entre les différents acteurs de la chaine agroalimentaire et améliorent la réactivité en cas d’incident sanitaire.
+
+## Technologie d’identification et de suivi des produits
+
+### Code- barres, QR codes et RFID
+
+ Le code à barres est un système de codage de l’information représenté par une succession de barres et d’espaces de différentes largeurs dont la juxtaposition représente des données numériques et alphanumériques.  Ce système est un outil de fiabilisation des données : il élimine les erreurs dues aux saisies manuelles, notamment lors de changement d’atelier. Il est un outil de gestion de l’entreprise (production, stocks, commandes) et d’utilisation simple et rapide.
+Les QR codes, également appelés codes à réponse rapide, sont largement utilisés dans la gestion de la chaîne d’approvisionnement. Ils permettent de stocker des informations exhaustives sur les produits, comme leur origine et la liste des ingrédients, tout en étant facilement scandales via un téléphone portable.
+La technologie RFID (Identification par radio fréquence) utilise des champs électromagnétiques pour identifier et suivre automatiquement les étiquettes attachées aux objets, permettant un suivi en temps réel des produits individuels ou des palettes tout au long de la chaîne d’approvisionnement. Les étiquettes RFID facilitent également la surveillance de la température et des conditions de stockage. Cette technologie est appréciée pour sa simplicité d’utilisation et son faible entretien, assurant la lecture simultanée de centaines d’articles par un seul scanner.
+
+### Internet des objets (loT)
+
+L’Internet des objets IoT est un réseau d’appareils interconnectés échangeant des informations, ce qui permet une traçabilité complète de la chaîne d’approvisionnement. Grâce à des technologies telles que les capteurs, le cloud computing et le big data, l’IoT offre un vaste potentiel, allant de la surveillance des conditions environnementales pendant l’approvisionnement au suivi de la consommation. 
+
+## La blockchain
+
+Autrefois réservée uniquement aux crypto-monnaies et à la finance, la blockchain est désormais un outil indispensable pour assurer la traçabilité au sein de la chaîne d’approvisionnement. Fonctionnant comme un registre permanent et sécurisé des transactions, la blockchain enregistre toutes les activités liées à un produit dans des blocs interconnectés. Chaque bloc contient des horodatages et des informations sur les parties impliquées, permettant ainsi une traçabilité complète du cycle de vie du produit. Les données enregistrées sont inviolables, renforçant la confiance et la transparence tout au long de la chaîne de valeur.
+
+# Impact du numérique sur la sécurité des aliments
+
+## Avantage pour la sécurité alimentaire
+
+Meilleure détection et prévention des risques en temps réel : les technologies numériques (loT, systèmes de surveillance automatisés) permettent de collecter des données en temps réel sur les conditions de production, de stockage et de transport (température, humidité, localisation, etc.). Cela améliore la détection précoce des conditions dangereuse et permet une intervention rapide avant qu’un risque ne devienne un problème sanitaire.
+Amélioration de la traçabilité et des rappels ciblés : la numérisation permet un suivi précis « du champ à l’assiette », ce qui facilite l’identification rapide de la source d’une contamination ou d’un défaut sanitaire. Grace à ces systèmes, lorsqu’un problème survient, il est possible de localiser exactement les lots concernés et de lancer des rappels ciblés, minimisant ainsi l’impact sanitaire et économique.
+
+## 	Limites et défis 
+
+Malgré ses nombreux avantages, la traçabilité numérique présente certaines limites. Les couts d’implantation, la complexité technologique, la protection des données et l’interopérabilité entre les systèmes constituent les défis majeurs, en particulier pour les petites et moyennes entreprises. De plus, la fiabilité des systèmes numériques dépend fortement de la qualité des données saisies.
+
+# Conclusion {-}
+
+Le numérique joue un rôle déterminant dans le renforcement de la traçabilité alimentaire et, par conséquent, de la sécurité des aliments. Les outils numériques offrent des solutions performantes pour suivre les produits, prévenir les risques sanitaires et lutter contre les fraudes. Toutefois, leur efficacité repose sur une mise en œuvre maitrisée, une formation adéquate des acteurs et un cadre réglementaire adapté. À l’avenir, l’intégration progressive de technologie innovantes comme la blockchain et le loT, devrait contribuer à transformer les systèmes de traçabilité et renforcer la sécurité alimentaire à l’échelle mondiale.
+
+# Références {-}
+# Liens {-}
+
+SIG , 2023. Les technologies de traçabilité - SIG Blog. SIG [en ligne]. [Consulté le 11 février 2026]. Disponible à l’adresse : https://www.sig.biz/fr-fr/actualites-et-informations/blog/la-technologie-au-service-de-la-tracabilite
+
+MCF, [Sans date]. Qu’est-ce que la traçabilité des denrées alimentaires ? [en ligne]. [Consulté le 10 février 2026]. Disponible à l’adresse : https://www.lemoinscher-formation.com/qu-est-ce-tracabilite-denrees-alimentaires-132.fr.html
+
+EUR-Lex, Regulation (EC) No 178/2002 of the European Parliament and of the Council of 28 January 2002 laying down the general principles and requirements of food law, establishing the European Food Safety Authority and laying down procedures in matters of food safety, 2002. [en ligne]. [Consulté le 11 février 2026]. Disponible à l’adresse : http://data.europa.eu/eli/reg/2002/178/oj
+
+Ministere de l’économie, des finances et de  l’industrie, 2001. economie.gouv.fr/files/files/directions_services/dgccrf/boccrf/01_11/a0110004.htm. [en ligne]. [Consulté le 11 février 2026]. Disponible à l’adresse : https://www.economie.gouv.fr/files/files/directions_services/dgccrf/boccrf/01_11/a0110004.htm
+
+# Bibiographie {-}
+
+<div id="refs"></div>
